--- a/index.html
+++ b/index.html
@@ -22,42 +22,88 @@
 
                     <li class="nav__item">
                         <a href="#home" class="nav__link">
-                            <i class="uil uil-home"></i> Home
+                            <i class="uil uil-home nav__icon"></i> Home
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#about" class="nav__link">
-                            <i class="uil uil-user"></i> About
+                            <i class="uil uil-user nav__icon"></i> About
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#skills" class="nav__link">
-                            <i class="uil uil-file-alt"></i> Skills
+                            <i class="uil uil-file-alt nav__icon"></i> Skills
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#services" class="nav__link">
-                            <i class="uil uil-briefcase"></i> Services
+                            <i class="uil uil-briefcase nav__icon"></i> Services
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#portfolio" class="nav__link">
-                            <i class="uil uil-scenery"></i> Portfolio
+                            <i class="uil uil-scenery nav__icon"></i> Portfolio
                         </a>
                     </li>
                     <li class="nav__item">
                         <a href="#contact" class="nav__link">
-                            <i class="uil uil-message"></i> Contact me
+                            <i class="uil uil-message nav__icon"></i> Contact me
                         </a>
                     </li>
-
                 </ul>
+                <i class="uil uil-times nav__close" id="nav-close"></i>
+            </div>
+            <div class="nav__btns">
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class="uil uil-apps"></i>
+                </div>
             </div>
         </nav>
     </header>
 
     <main class="main">
+        <section class="home section" id="home">
+            <div class="home__container container grid">
+                <div class="home__content grid">
+                    <div class="home__social">
+                        <a href="https://www.linkedin.com/" target="_blank" class="home__social-icon">
+                            <i class="uil uil-linkedin-alt"></i>
+                        </a>
+                        <a href="https://github.com/" target="_blank" class="home__social-icon">
+                            <i class="uil uil-github-alt"></i>
+                        </a>
+                    </div>
 
+                    <div class="home__img">
+                        <svg class="home__blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                            <mask id="mask0" mask-type="alpha">
+                                <path fill="#576EE0" d="M68.1,-18.1C77.7,7.5,67.7,43.4,46.6,57.1C25.5,70.7,-6.7,62.1,-29.4,44.6C-52.1,27.1,-65.3,0.8,-58.9,-20.5C-52.4,-41.7,-26.2,-57.9,1.5,-58.4C29.2,-58.9,58.5,-43.7,68.1,-18.1Z" transform="translate(100 100)" />
+                            </mask>
+                            <g mask="url(#mask0)">
+                                <path fill="#576EE0" d="M68.1,-18.1C77.7,7.5,67.7,43.4,46.6,57.1C25.5,70.7,-6.7,62.1,-29.4,44.6C-52.1,27.1,-65.3,0.8,-58.9,-20.5C-52.4,-41.7,-26.2,-57.9,1.5,-58.4C29.2,-58.9,58.5,-43.7,68.1,-18.1Z" transform="translate(100 100)" />
+                                <image class="home__blob-img" x='12' y='18' xlink:href="assets/img/perfil.png">
+                            </g>
+                            </svg>
+                    </div>
+                    <div class="home__data">
+                        <h1 class="home__title">Hi, I am Marko</h1>
+                        <h3 class="home__subtitle">Developer</h3>
+                        <p class="home__description">DEscriptionnn</p>
+                        <a href="#contact" class="button button--flex">
+                            Contact Me <i class="uil uil-message button__icon"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="home_scroll">
+                    <a href="#about" class="home__scroll-button button--flex">
+                        <i class="uil uil-mouse-alt home__scroll-mouse"></i>
+                        <span class="home__scroll-name">Scroll down</span>
+                        <i class="uil uil-arrow-down home__scroll-arrow"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="assets/js/main.js"></script>
